--- a/P2/Makefile
+++ b/P2/Makefile
@@ -7,3 +7,6 @@ setup:
 	petpal/manage.py makemigrations
 	petpal/manage.py migrate
 	petpal/manage.py loaddata petpal/test_data.json
+
+run:
+	python petpal/manage.py runserver
