Delete all migrations on clean for ease of dev

--- a/P2/Makefile
+++ b/P2/Makefile
@@ -2,6 +2,7 @@ clean-and-setup: clean setup
 	
 clean:
 	rm -rf petpal/db.sqlite3
+	rm -rf petpal/*/migrations/0*.py
 
 setup:
 	petpal/manage.py makemigrations
