--- a/P3/frontend/petpal/package.json
+++ b/P3/frontend/petpal/package.json
@@ -13,8 +13,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "tw-elements": "^1.0.0",
     "tw-elements-react": "^1.0.0-alpha2",
+    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
